<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/introLoading1Img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/splash1_1"
        android:scaleType="centerCrop" >
    </ImageView>

    <ImageView
        android:id="@+id/introLoading2Img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/splash1_2"
        android:scaleType="centerCrop"
        android:visibility="gone" >
    </ImageView>

    <RelativeLayout
        android:id="@+id/login_interface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp" >

        <LinearLayout
            android:id="@+id/login_normal_interface"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/txt_login_valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/popup_inline_error_above"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_login_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/input_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_login_pw"
                android:imeOptions="actionNone"
                android:inputType="textPassword"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_normal_login_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_cancel" />

                <Button
                    android:id="@+id/btn_normal_login_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/btn_normal_join"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/btn_join"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_find_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:text="@string/btn_find_id_pw"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn_interface"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible" >

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/com_facebook_loginbutton_silver"
                android:gravity="center" />

            <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
                android:id="@+id/btn_naver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_normal_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btn_login" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>